# sm-api

./: Cargo.toml
app/: Cargo.toml
app/src/: conf.rs  error.rs  lib.rs  main.rs  routes.rs  services.rs
app/src/middleware/: auth.rs
app/src/routes/: auth.rs  post.rs  prelude.rs  user.rs
app/src/services/: auth.rs  image.rs  post.rs  slug.rs  time.rs  user.rs
entity/: Cargo.toml
entity/src/: comment.rs  lib.rs  like.rs  post.rs  post_tag.rs  tag.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250105_080123_seed_user.rs  m20250105_223608_create_post_table.rs  m20250105_232528_seed_post.rs  m20250106_071837_create_comment_table.rs  m20250106_072207_seed_comment.rs  m20250122_090442_create_tag_table.rs  m20250122_090545_seed_tag.rs  m20250129_175434_create_post_tag.rs  m20250129_180017_seed_post_tag.rs  m20250205_223646_create_like_table.rs  m20250205_231848_seed_like_table.rs  main.rs
sql/user/: create.sql  get.sql
src/: conf.rs  main.rs  models.rs  routes.rs
