[package]
name = "sm-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "app",
  "entity"
]

[dependencies]
sm-app = { path = "./app" }

[workspace.dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deadpool-postgres = { version = "0.14.1" }
tokio-postgres = { version = "^0.7.9" }
tokio-pg-mapper = { version = "0.2.0" }
tokio-pg-mapper-derive = { version = "0.2.0" }
sea-orm = { version = "1.1.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ]}
