[package]
name = "sm-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "app",
  "entity",
  "migration"
]

[dependencies]
sm-app = { path = "./app" }

[workspace.dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.3", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ]}
