[package]
name = "sm-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "sm_app"
path = "./src/lib.rs"

[dependencies]
sm-entity = { path = "../entity" }
sm-migration = { path = "../migration" }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
jsonwebtoken = "9.3.0"
futures-util = "0.3.31"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
tokio = { version = "1.43.0", features = ["full"] }
actix-files = "0.6.6"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
env_logger = "0.11.6"
derive_more = { version = "1.0.0", features = ["display", "error"] }
